<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    tools:context=".ListItemsActivity"
    tools:layout_editor_absoluteY="81dp">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/RadioButton" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:onClick="OnCheckChanged"
        android:text="@string/CheckBox" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/Switch"
        android:onClick="setOnCheckedChanged"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:contentDescription="@string/Image"
        android:gravity="fill"
        android:onClick="click_image"
        android:text="@string/Image"
        app:srcCompat="@android:drawable/ic_menu_camera" />

</GridLayout>