<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/show_message"
        android:layout_width="395dp"
        android:layout_height="115dp"
        android:layout_margin="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="53dp"
        android:text="@string/show_message"
        app:layout_constraintBottom_toTopOf="@+id/show_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/show_id"
        android:layout_width="385dp"
        android:layout_height="99dp"
        android:layout_below="@id/show_message"
        android:layout_margin="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="261dp"
        android:text="@string/show_id"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_message" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="7dp"
        android:text="@string/delete_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_id" />
</androidx.constraintlayout.widget.ConstraintLayout>