<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherForecast">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="191dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="107dp"
        android:layout_marginBottom="107dp"
        app:layout_constraintBottom_toBottomOf="@+id/min_temp"
        app:layout_constraintStart_toStartOf="@+id/cityName"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName"
        app:srcCompat="@android:drawable/editbox_dropdown_light_frame" />

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/current_temp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/min_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="3dp"
        android:text="@string/min_temp"
        app:layout_constraintEnd_toEndOf="@+id/current_temp"
        app:layout_constraintTop_toBottomOf="@+id/current_temp" />

    <TextView
        android:id="@+id/max_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/max_temp"
        app:layout_constraintStart_toStartOf="@+id/min_temp"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="313dp"
        android:layout_height="34dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/max_temp" />

    <Spinner
        android:id="@+id/citySpinner"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/cityName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="39dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/citySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:text="@string/select_city"
        app:layout_constraintBottom_toBottomOf="@+id/citySpinner"
        app:layout_constraintEnd_toStartOf="@+id/citySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="239dp"
        android:text="@string/current_temp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="6dp"
        android:text="@string/mintemp"
        app:layout_constraintBaseline_toBaselineOf="@+id/min_temp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="37dp"
        android:text="@string/maxtemp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>